--- a/package.json
+++ b/package.json
@@ -1,43 +1,42 @@
 {
-  "name": "empty_project",
+  "name": "css_seletors",
   "version": "0.0.0",
-  "description": "Empty project template",
+  "description": "CSS-seletors",
   "private": true,
   "scripts": {
     "build": "webpack",
     "dev": "webpack serve --env development",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint src",
     "test": "jest"
   },
-  "author": "Kris Casper",
   "devDependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-typescript": "^7.21.5",
-    "@types/jest": "^29.5.2",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "babel-jest": "^29.7.0",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "copy-webpack-plugin": "^8.1.1",
-    "css-loader": "^5.2.4",
-    "eslint": "^7.25.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-webpack-plugin": "^2.5.4",
+    "eslint": "^9.9.0",
+    "eslint-webpack-plugin": "^4.2.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.4",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "@babel/preset-typescript": "^7.24.7",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "eslint-plugin-jest": "^28.8.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "html-webpack-plugin": "^5.6.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-localstorage-mock": "^2.4.26",
-    "mini-css-extract-plugin": "^1.6.2",
-    "sass": "^1.32.12",
-    "sass-loader": "^11.0.1",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.1.1",
-    "typescript": "^4.2.4",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.15.1"
+    "mini-css-extract-plugin": "^2.9.0",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0"
   }
 }
