--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^7.1.2",
     "eslint-plugin-jest": "^28.8.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-localstorage-mock": "^2.4.26",
